fix: Fix style collapse in the bottom border of `<Footer />`
A box-sizing property has been added to the body element in the global.css file. This change ensures that the content box model is applied to the body element and will impact the layout styling and calculations throughout the project.

--- a/src/global.css
+++ b/src/global.css
@@ -73,6 +73,7 @@ html {
 	background-color: var(--color-base-1);
 
 	body {
+		box-sizing: content-box;
 		block-size: var(--block-size-body);
 		overflow: hidden;
 		font-family: var(--font-family-primary), var(--font-family-default);
